--- a/certifications.html
+++ b/certifications.html
@@ -12,7 +12,7 @@
       <h1>A SOFTWARE ENGINEER</h1>
       <nav>
         <ul>
-          <li><a class="on-cursor">About</a></li>
+          <li><a class="on-cursor" href="./index.html">About</a></li>
           <li><a class="on-cursor" href="./experience.html">Experience</a></li>
           <li><a class="on-cursor" href="./education.html">Education</a></li>
           <li><a class="on-cursor" href="./skills.html">Skills</a></li>
@@ -21,17 +21,15 @@
       </nav>
     </header>
 
-    <section id="about">
-      <h2>About Me</h2>
+    <section id="education">
+      <h2>Certifications</h2>
       <div class="portfolio-items">
-        <div class="portfolio-item">
-          <p>
-            React-Typescript frontend developer with 2+ years of hands-on
-            experience in identifying web-based user interactions along with
-            designing & implementing responsive user interface components by
-            deploying React concepts. Eager to learn advanced technologies to
-            contribute extensive experience.
-          </p>
+        <div class="portfolio-item certifications-content">
+          <ul class="certifications-list">
+            <li>Introduction to Python, provided by Simplilearn</li>
+            <li>Introduction to Cyber Security, provided by Simplilearn.</li>
+            <li>Salesforce: Job Ready Developer course provided by ICTAK</li>
+          </ul>
         </div>
       </div>
     </section>
@@ -46,7 +44,5 @@
         </div>
       </div>
     </footer>
-
-    <!-- <script src="script.js"></script> -->
   </body>
 </html>
