--- a/education.html
+++ b/education.html
@@ -12,26 +12,35 @@
       <h1>A SOFTWARE ENGINEER</h1>
       <nav>
         <ul>
-          <li><a class="on-cursor">About</a></li>
+          <li><a class="on-cursor" href="./index.html">About</a></li>
           <li><a class="on-cursor" href="./experience.html">Experience</a></li>
-          <li><a class="on-cursor" href="./education.html">Education</a></li>
+          <li><a class="on-cursor">Education</a></li>
           <li><a class="on-cursor" href="./skills.html">Skills</a></li>
-          <li><a class="on-cursor">Certifications</a></li>
+          <li>
+            <a class="on-cursor" href="./certifications.html">Certifications</a>
+          </li>
         </ul>
       </nav>
     </header>
 
-    <section id="about">
-      <h2>About Me</h2>
+    <section id="education">
+      <h2>Education</h2>
       <div class="portfolio-items">
-        <div class="portfolio-item">
-          <p>
-            React-Typescript frontend developer with 2+ years of hands-on
-            experience in identifying web-based user interactions along with
-            designing & implementing responsive user interface components by
-            deploying React concepts. Eager to learn advanced technologies to
-            contribute extensive experience.
-          </p>
+        <div class="portfolio-item education-content">
+          <ul class="education-list">
+            <li>
+              Don Bosco Higher Secondary School: High School Education - SSLC
+              (2015) - 86
+            </li>
+            <li>
+              Don Bosco Higher Secondary School: Higher Secondary Education -
+              Computer Science (2015-2017) - 81.83
+            </li>
+            <li>
+              Kerala Technical University: B-Tech in Computer Science
+              Engineering (2017 - 2021) - 7.84
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -46,7 +55,5 @@
         </div>
       </div>
     </footer>
-
-    <!-- <script src="script.js"></script> -->
   </body>
 </html>
