--- a/skills.html
+++ b/skills.html
@@ -12,26 +12,28 @@
       <h1>A SOFTWARE ENGINEER</h1>
       <nav>
         <ul>
-          <li><a class="on-cursor">About</a></li>
+          <li><a class="on-cursor" href="./index.html">About</a></li>
           <li><a class="on-cursor" href="./experience.html">Experience</a></li>
           <li><a class="on-cursor" href="./education.html">Education</a></li>
-          <li><a class="on-cursor" href="./skills.html">Skills</a></li>
-          <li><a class="on-cursor">Certifications</a></li>
+          <li><a class="on-cursor">Skills</a></li>
+          <li>
+            <a class="on-cursor" href="./certifications.html">Certifications</a>
+          </li>
         </ul>
       </nav>
     </header>
 
-    <section id="about">
-      <h2>About Me</h2>
+    <section id="skills">
+      <h2>Skills</h2>
       <div class="portfolio-items">
-        <div class="portfolio-item">
-          <p>
-            React-Typescript frontend developer with 2+ years of hands-on
-            experience in identifying web-based user interactions along with
-            designing & implementing responsive user interface components by
-            deploying React concepts. Eager to learn advanced technologies to
-            contribute extensive experience.
-          </p>
+        <div class="portfolio-item skills-content">
+          <ul class="skills-list">
+            <li>Javascript (React with Typescript)</li>
+            <li>HTML5/SCSS/SASS/Emotion-Styled</li>
+            <li>Electron Js</li>
+            <li>Salesforce</li>
+            <li>GitHub</li>
+          </ul>
         </div>
       </div>
     </section>
@@ -46,7 +48,5 @@
         </div>
       </div>
     </footer>
-
-    <!-- <script src="script.js"></script> -->
   </body>
 </html>
