--- a/certifications.html
+++ b/certifications.html
@@ -21,18 +21,20 @@
       </nav>
     </header>
 
-    <section id="education">
-      <h2>Certifications</h2>
-      <div class="portfolio-items">
-        <div class="portfolio-item certifications-content">
-          <ul class="certifications-list">
-            <li>Introduction to Python, provided by Simplilearn</li>
-            <li>Introduction to Cyber Security, provided by Simplilearn.</li>
-            <li>Salesforce: Job Ready Developer course provided by ICTAK</li>
-          </ul>
+    <div class="content-container">
+      <section id="education" class="content-section">
+        <h2>Certifications</h2>
+        <div class="portfolio-items">
+          <div class="portfolio-item certifications-content">
+            <ul class="certifications-list">
+              <li>Introduction to Python, provided by Simplilearn</li>
+              <li>Introduction to Cyber Security, provided by Simplilearn.</li>
+              <li>Salesforce: Job Ready Developer course provided by ICTAK</li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer>
       <div class="reach-out-section">
