--- a/education.html
+++ b/education.html
@@ -23,27 +23,29 @@
       </nav>
     </header>
 
-    <section id="education">
-      <h2>Education</h2>
-      <div class="portfolio-items">
-        <div class="portfolio-item education-content">
-          <ul class="education-list">
-            <li>
-              Don Bosco Higher Secondary School: High School Education - SSLC
-              (2015) - 86
-            </li>
-            <li>
-              Don Bosco Higher Secondary School: Higher Secondary Education -
-              Computer Science (2015-2017) - 81.83
-            </li>
-            <li>
-              Kerala Technical University: B-Tech in Computer Science
-              Engineering (2017 - 2021) - 7.84
-            </li>
-          </ul>
+    <div class="content-container">
+      <section id="education" class="content-section">
+        <h2>Education</h2>
+        <div class="portfolio-items">
+          <div class="portfolio-item education-content">
+            <ul class="education-list">
+              <li>
+                Don Bosco Higher Secondary School: High School Education - SSLC
+                (2015) - 86
+              </li>
+              <li>
+                Don Bosco Higher Secondary School: Higher Secondary Education -
+                Computer Science (2015-2017) - 81.83
+              </li>
+              <li>
+                Kerala Technical University: B-Tech in Computer Science
+                Engineering (2017 - 2021) - 7.84
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer>
       <div class="reach-out-section">
