--- a/experience.html
+++ b/experience.html
@@ -23,34 +23,36 @@
       </nav>
     </header>
 
-    <section id="experience">
-      <h2>Experience</h2>
-      <div class="portfolio-items">
-        <div class="portfolio-item experience-content">
-          <ul class="experience-list">
-            <li>
-              Worked in a project to re-architect a flight booking desktop
-              application with 700 plus screens into a single page web
-              application using React with typescript.
-            </li>
-            <li>
-              Developed reusable components with features and enhancements in
-              compliance with the application specifications.
-            </li>
-            <li>
-              Coordinated with 7 other cross functional teams and with other
-              vendors as well to assimilate customer requirements and to
-              integrate multiple screens and components as per the application
-              flow.
-            </li>
-            <li>
-              Constructed responsive screens and interfaces in accordance with
-              the application.
-            </li>
-          </ul>
+    <div class="content-container">
+      <section id="experience" class="content-section">
+        <h2>Experience</h2>
+        <div class="portfolio-items">
+          <div class="portfolio-item experience-content">
+            <ul class="experience-list">
+              <li>
+                Worked in a project to re-architect a flight booking desktop
+                application with 700 plus screens into a single page web
+                application using React with typescript.
+              </li>
+              <li>
+                Developed reusable components with features and enhancements in
+                compliance with the application specifications.
+              </li>
+              <li>
+                Coordinated with 7 other cross functional teams and with other
+                vendors as well to assimilate customer requirements and to
+                integrate multiple screens and components as per the application
+                flow.
+              </li>
+              <li>
+                Constructed responsive screens and interfaces in accordance with
+                the application.
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer>
       <div class="reach-out-section">
