--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
       </nav>
     </header>
 
-    <section id="about">
-      <h2>About Me</h2>
-      <div class="portfolio-items">
-        <div class="portfolio-item">
-          <p>
-            React-Typescript frontend developer with 2+ years of hands-on
-            experience in identifying web-based user interactions along with
-            designing & implementing responsive user interface components by
-            deploying React concepts. Eager to learn advanced technologies to
-            contribute extensive experience.
-          </p>
+    <div class="content-container">
+      <section id="about" class="content-section">
+        <h2>About Me</h2>
+        <div class="portfolio-items">
+          <div class="portfolio-item">
+            <p>
+              React-Typescript frontend developer with 2+ years of hands-on
+              experience in identifying web-based user interactions along with
+              designing & implementing responsive user interface components by
+              deploying React concepts. Eager to learn advanced technologies to
+              contribute extensive experience.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer>
       <div class="reach-out-section">
