--- a/skills.html
+++ b/skills.html
@@ -23,20 +23,22 @@
       </nav>
     </header>
 
-    <section id="skills">
-      <h2>Skills</h2>
-      <div class="portfolio-items">
-        <div class="portfolio-item skills-content">
-          <ul class="skills-list">
-            <li>Javascript (React with Typescript)</li>
-            <li>HTML5/SCSS/SASS/Emotion-Styled</li>
-            <li>Electron Js</li>
-            <li>Salesforce</li>
-            <li>GitHub</li>
-          </ul>
+    <div class="content-container">
+      <section id="skills" class="content-section">
+        <h2>Skills</h2>
+        <div class="portfolio-items">
+          <div class="portfolio-item skills-content">
+            <ul class="skills-list">
+              <li>Javascript (React with Typescript)</li>
+              <li>HTML5/SCSS/SASS/Emotion-Styled</li>
+              <li>Electron Js</li>
+              <li>Salesforce</li>
+              <li>GitHub</li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </div>
 
     <footer>
       <div class="reach-out-section">
