--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
           <li><a class="on-cursor" href="./experience.html">Experience</a></li>
           <li><a class="on-cursor" href="./education.html">Education</a></li>
           <li><a class="on-cursor" href="./skills.html">Skills</a></li>
-          <li><a class="on-cursor">Certifications</a></li>
+          <li>
+            <a class="on-cursor" href="./certifications.html">Certifications</a>
+          </li>
         </ul>
       </nav>
     </header>
